Add uuid for each TODO and finish add new todo

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -15,6 +15,7 @@
 
 .App-body h1 {
   font-weight: lighter;
-  font-style: italic;
+  /* font-style: italic; */
+  color: #5ed4f4;
   font-size: 4rem;
 }
